Added whitelisting filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -107,4 +107,10 @@ contact-frontend {
   host = "http://localhost:9250"
 }
 
+whitelist {
+  allowedIps = "MTI3LjAuMC4x"
+  excludedPaths = "L2hlYWx0aGNoZWNrLC9waW5nL3Bpbmc="
+  enabled = false
+  shutter-page-url = "https://www.tax.service.gov.uk/shutter/vat-through-software"
+}
 
