--- a/conf/application.conf
+++ b/conf/application.conf
@@ -107,6 +107,11 @@ contact-frontend {
   host = "http://localhost:9250"
 }
 
+accessibilityReport {
+  enabled = true
+  url = "/vat-through-software/accessibility-report"
+}
+
 whitelist {
   allowedIps = "MTI3LjAuMC4x"
   excludedPaths = "L2hlYWx0aGNoZWNrLC9waW5nL3Bpbmc="
