BTAT-6654 updated url for report

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,6 +54,10 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 play.modules.enabled += "config.Module"
 
+features {
+  accessibilityReport.enabled = true
+}
+
 microservice {
   metrics {
     graphite {
@@ -108,8 +112,8 @@ contact-frontend {
 }
 
 accessibilityReport {
-  enabled = true
-  url = "/vat-through-software/accessibility-report"
+  host = "http://localhost:9152"
+  url = "/vat-through-software/accessibility-statement"
 }
 
 whitelist {
