BTAT-6654 adding feature switch view

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,7 +54,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 play.modules.enabled += "config.Module"
 
-features {
+config.features {
   accessibilityReport.enabled = true
 }
 
@@ -115,6 +115,8 @@ accessibilityReport {
   host = "http://localhost:9152"
   url = "/vat-through-software/accessibility-statement"
 }
+
+VatReturnPeriodUrl = ""http://localhost:9167"
 
 whitelist {
   allowedIps = "MTI3LjAuMC4x"
