--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,7 +54,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 play.modules.enabled += "config.Module"
 
-config.features {
+features {
   accessibilityReport.enabled = true
 }
 
