--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,6 +73,10 @@ microservice {
       host = localhost
       port = 9250
     }
+    auth {
+      host = localhost
+      port = 8500
+    }
   }
 }
 
@@ -123,3 +127,31 @@ whitelist {
   shutter-page-url = "https://www.tax.service.gov.uk/shutter/vat-through-software"
 }
 
+signIn {
+  url = "http://localhost:9949/auth-login-stub/gg-sign-in"
+  continueBaseUrl = "http://localhost:9150"
+  continueUrl = "/vat-through-software/account/change-business-details"
+}
+
+government-gateway {
+  host = "http://localhost:9025"
+}
+
+feedback-frontend {
+  host = "http://localhost:9514"
+  url = "/feedback"
+}
+
+vat-agent-client-lookup-frontend {
+  host = "http://localhost:9147"
+  nonStubHost = "http://localhost:9149"
+  startUrl = "/vat-through-software/submit-vat-return/test-only/vaclf-stub"
+  unauthorisedUrl = "/vat-through-software/submit-vat-return/test-only/vaclf-stub-unauth"
+  whatToDoUrl = "/vat-through-software/representative/agent-action"
+  agentActionUrl = "/vat-through-software/submit-vat-return/test-only/vaclf-stub-agent-action"
+}
+
+gov-uk.guidance {
+  agentServices.url = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
+  mtdVat.url = "https://www.gov.uk/guidance/making-tax-digital-for-vat"
+}
