--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,6 +77,10 @@ microservice {
       host = localhost
       port = 8500
     }
+    vat-subscription {
+      host = localhost
+      port = 9567
+    }
   }
 }
 
