Removed unused models

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,10 @@ assets {
   url = "http://localhost:9032/assets/"
 }
 
+platform {
+  host = "http://localhost:9167"
+}
+
 contact-frontend {
   host = "http://localhost:9250"
 }
