Added contact preference connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,7 @@ play.modules.enabled += "config.Module"
 
 features {
   accessibilityReport.enabled = true
+  stubContactPreferences.enabled = true
 }
 
 microservice {
@@ -73,13 +74,25 @@ microservice {
       host = localhost
       port = 9250
     }
+
     auth {
       host = localhost
       port = 8500
     }
+
     vat-subscription {
       host = localhost
       port = 9567
+    }
+
+    vat-subscription-dynamic-stub {
+      host = localhost
+      port = 9156
+    }
+
+    contact-preferences {
+      host = localhost
+      port = 9592
     }
   }
 }
