--- a/conf/application.conf
+++ b/conf/application.conf
@@ -163,6 +163,12 @@ feedback-frontend {
   url = "/feedback"
 }
 
+manage-vat-subscription-frontend {
+  host = "http://localhost:9150"
+  url = "/vat-through-software/account/change-business-details"
+  changeNameUrl = "/vat-through-software/account/change-business-name"
+}
+
 vat-agent-client-lookup-frontend {
   host = "http://localhost:9147"
   nonStubHost = "http://localhost:9149"
