WIP: Removing unused tests and moving to scalamock

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,7 @@ play.http.filters = "config.filters.ServiceFilters"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
 # Custom error handler
-play.http.errorHandler = "config.ErrorHandler"
+play.http.errorHandler = "config.ServiceErrorHandler"
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
 
@@ -57,6 +57,7 @@ play.modules.enabled += "config.Module"
 features {
   accessibilityReport.enabled = true
   stubContactPreferences.enabled = true
+  stubAgentClientLookup.enabled = true
 }
 
 microservice {
