--- a/conf/application.conf
+++ b/conf/application.conf
@@ -180,3 +180,8 @@ gov-uk.guidance {
   agentServices.url = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
   mtdVat.url = "https://www.gov.uk/guidance/making-tax-digital-for-vat"
 }
+
+timeout {
+  period: 900
+  countDown: 120
+}
