[BTAT-7560] - added emailVerification feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,6 +60,7 @@ play.modules.enabled += "config.Module"
 features {
   stubContactPreferences.enabled = true
   stubAgentClientLookup.enabled = true
+  emailVerifiedFeature.enabled = true
 }
 
 microservice {
