BTAT-7786 Adding feature and content for bulk agent paper update

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,7 @@ features {
   stubContactPreferences.enabled = true
   stubAgentClientLookup.enabled = true
   emailVerifiedFeature.enabled = true
+  agentBulkPaper.enabled = true
 }
 
 microservice {
