--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@ include "frontend.conf"
 
 appName = "vat-return-period-frontend"
 play.http.router = prod.Routes
-play.i18n.langs  = ["en"]
+play.i18n.langs  = ["en", "cy"]
 play.i18n.langCookieHttpOnly = true
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
