Added feature and logic to get comms pref from API#1363

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,6 +62,7 @@ features {
   stubAgentClientLookup.enabled = true
   emailVerifiedFeature.enabled = true
   agentBulkPaper.enabled = true
+  contactPrefMigration.enabled = true
 }
 
 microservice {
