--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,6 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.FrontendModule"
 play.http.filters = "config.filters.ServiceFilters"
 
 # Default http client
@@ -50,7 +49,7 @@ play.filters.headers.xssProtection = "1"
 # ~~~~
 # Additional play modules can be added here
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.FrontendModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.frontend.FrontendModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
