--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 # Custom error handler
 play.http.errorHandler = "config.ServiceErrorHandler"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 https://www.google-analytics.com https://www.googletagmanager.com https://tagmanager.google.com data:"
 play.filters.headers.xssProtection = "1"
 
 # Play Modules
@@ -176,6 +176,10 @@ vat-agent-client-lookup-frontend {
 gov-uk.guidance {
   agentServices.url = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
   mtdVat.url = "https://www.gov.uk/guidance/making-tax-digital-for-vat"
+}
+
+tracking-consent-frontend {
+  url = "http://localhost:12345/tracking-consent/tracking.js"
 }
 
 timeout {
