--- a/conf/application.conf
+++ b/conf/application.conf
@@ -176,7 +176,7 @@ gov-uk.guidance {
 }
 
 tracking-consent-frontend {
-  url = "http://localhost:12345/tracking-consent/tracking.js"
+  gtm.container = "a"
 }
 
 timeout {
