--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,12 +124,6 @@ google-analytics {
   host = auto
 }
 
-assets {
-  version = "3.11.0"
-  version = ${?ASSETS_FRONTEND_VERSION}
-  url = "http://localhost:9032/assets/"
-}
-
 platform {
   host = "http://localhost:9167"
 }
@@ -170,9 +164,16 @@ vat-agent-client-lookup-frontend {
   agentActionUrl = "/vat-through-software/representative/agent-action"
 }
 
-gov-uk.guidance {
-  agentServices.url = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
-  mtdVat.url = "https://www.gov.uk/guidance/making-tax-digital-for-vat"
+mdtp {
+  cookies = "https://www.tax.service.gov.uk/help/cookies"
+  privacyPolicy = "https://www.tax.service.gov.uk/help/privacy"
+  termsAndConditions = "https://www.tax.service.gov.uk/help/terms-and-conditions"
+}
+
+gov-uk {
+  agentServices = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
+  mtdVat = "https://www.gov.uk/guidance/making-tax-digital-for-vat"
+  helpUsingGovuk = "https://www.gov.uk/help"
 }
 
 tracking-consent-frontend {
