--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 # Custom error handler
 play.http.errorHandler = "config.ServiceErrorHandler"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 https://www.google-analytics.com https://www.googletagmanager.com https://tagmanager.google.com data:"
+play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 https://www.google-analytics.com https://www.googletagmanager.com https://tagmanager.google.com data:"
 play.filters.headers.xssProtection = "1"
 
 # Play Modules
@@ -59,6 +59,20 @@ play.modules.enabled += "config.Module"
 features {
   stubContactPreferences.enabled = true
   stubAgentClientLookup.enabled = true
+}
+
+controllers {
+  controllers.Assets = {
+    needsAuditing = false
+  }
+
+  uk.gov.hmrc.govukfrontend.controllers.Assets = {
+    needsAuditing = false
+  }
+
+  uk.gov.hmrc.hmrcfrontend.controllers.Assets = {
+    needsAuditing = false
+  }
 }
 
 microservice {
