[BTAT-9597] Added link to start page in service header

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -173,8 +173,14 @@ manage-vat-subscription-frontend {
 
 vat-agent-client-lookup-frontend {
   host = "http://localhost:9149"
+  homeUrl = "/vat-through-software/representative/client-vat-account"
   startUrl = "/vat-through-software/representative/client-vat-number"
   unauthorisedUrl = "/vat-through-software/representative/unauthorised-for-client"
+}
+
+business-tax-account {
+  host = "http://localhost:9020"
+  homeUrl = "/business-account"
 }
 
 gov-uk {
