[BTAT-9718] Updated service name and url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -177,6 +177,11 @@ vat-agent-client-lookup-frontend {
   unauthorisedUrl = "/vat-through-software/representative/unauthorised-for-client"
 }
 
+vat-summary-frontend {
+  host = "http://localhost:9152"
+  detailsUrl = "/vat-through-software/vat-overview"
+}
+
 business-tax-account {
   host = "http://localhost:9020"
   homeUrl = "/business-account"
