[BTAT-9718] Addressed PR comments

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -145,11 +145,6 @@ contact-frontend {
   host = "http://localhost:9250"
 }
 
-accessibilityReport {
-  host = "http://localhost:9152"
-  url = "/vat-through-software/accessibility-statement"
-}
-
 signIn {
   url = "http://localhost:9949/auth-login-stub/gg-sign-in"
   continueBaseUrl = "http://localhost:9150"
@@ -180,11 +175,7 @@ vat-agent-client-lookup-frontend {
 vat-summary-frontend {
   host = "http://localhost:9152"
   detailsUrl = "/vat-through-software/vat-overview"
-}
-
-business-tax-account {
-  host = "http://localhost:9020"
-  homeUrl = "/business-account"
+  accessibilityUrl = "/vat-through-software/accessibility-statement"
 }
 
 gov-uk {
