[BTAT-9851] Added new error view for insolvent users

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,6 +178,11 @@ vat-summary-frontend {
   accessibilityUrl = "/vat-through-software/accessibility-statement"
 }
 
+business-tax-account {
+  host = "http://localhost:9020"
+  homeUrl = "/business-account"
+}
+
 gov-uk {
   agentServices = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
   mtdVat = "https://www.gov.uk/guidance/making-tax-digital-for-vat"
