[BTAT-10013] Update config for new accessibility statement

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -175,8 +175,9 @@ vat-agent-client-lookup-frontend {
 vat-summary-frontend {
   host = "http://localhost:9152"
   detailsUrl = "/vat-through-software/vat-overview"
-  accessibilityUrl = "/vat-through-software/accessibility-statement"
 }
+
+accessibility-statement.service-path = "/vat-through-software"
 
 business-tax-account {
   host = "http://localhost:9020"
