--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,14 +19,6 @@ play.http.router = prod.Routes
 play.i18n.langs  = ["en", "cy"]
 play.i18n.langCookieHttpOnly = true
 
-# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
-# An audit connector must be provided.
-play.modules.enabled += "uk.gov.hmrc.play.audit.AuditModule"
-
-# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
-# A metric filter must be provided
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
 play.http.filters = "config.filters.ServiceFilters"
 
@@ -36,14 +28,12 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 # Custom error handler
 play.http.errorHandler = "config.ServiceErrorHandler"
 
-play.filters.csp.CSPFilter = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:12345 https://www.google-analytics.com https://www.googletagmanager.com https://tagmanager.google.com data:"
+play.filters.enabled += play.filters.csp.CSPFilter
 play.filters.headers.xssProtection = "1"
 
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.frontend.FrontendModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "config.Module"
@@ -69,9 +59,6 @@ controllers {
 microservice {
   metrics {
     graphite {
-      host = localhost
-      port = 2003
-      prefix = play.${appName}.
       enabled = true
     }
   }
@@ -105,23 +92,11 @@ microservice {
 }
 
 metrics {
-  name = ${appName}
-  rateUnit = SECONDS
-  durationUnit = SECONDS
-  showSamples = true
-  jvm = true
   enabled = true
 }
 
 auditing {
   enabled = true
-  traceRequests = true
-  consumer {
-    baseUri {
-      host = localhost
-      port = 8100
-    }
-  }
 }
 
 google-analytics {
