--- a/conf/application.conf
+++ b/conf/application.conf
@@ -152,3 +152,7 @@ timeout {
   period: 900
   countDown: 120
 }
+
+urBanner {
+    url = "https://www.gov.uk/government/organisations/hm-revenue-customs"
+}
