[DL-17660] add feature switch for UR Banner

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,7 @@ play.modules.enabled += "config.Module"
 
 features {
   stubAgentClientLookup.enabled = true
+  showUserResearchBanner.enabled = true
 }
 
 microservice {
